fix: title RWD bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,13 @@
 </head>
 
 <body class="h-screen bg-slate-100">
-    <div class="h-1/6 flex justify-center items-center">
-        <div class="flex justify-center items-center">
-            <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500 max-[410px]:ml-16"
-                width="120px">
-            <span class="font-bold tracking-wider text-4xl text-gray-600 ml-4">Course Search</span><br>
+    <div class="h-36 flex justify-center items-center">
+        <div class="flex justify-center items-center w-full gap-x-6">
+            <img src="/static/images/FCU.png" alt="" class="hover:scale-75 duration-500" width="120px">
+            <div class="max-[450px]:flex-col flex gap-x-2">
+                <div class="font-bold tracking-wider text-4xl text-gray-600">Course</div>
+                <div class="font-bold tracking-wider text-4xl text-gray-600">Search</div>
+            </div>
         </div>
     </div>
     <div class="min-[1100px]:h-4/6 flex justify-center items-center">
