refactor: change CDN tailwind css to npm plugin

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -15,11 +15,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <title>FCU COURSE</title>
     <link rel="icon" href="/static/images/FF.png" type="image/icon">
+    <link rel="stylesheet" href="../static/style/output.css">
+
     <style>
         .courseList {
             -ms-overflow-style: none;
@@ -53,12 +54,11 @@
     </div>
     <div class="flex max-[1200px]:flex-col h-3/4">
         <div class="flex min-[1200px]:flex-auto justify-center">
-            <div class="ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_19rem)] w-96 min-[1201px]:w-11/12 my-5 min-[1201px]:mt-0"
-                style="background-color: #dfe7d5;">
+            <div
+                class="ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_19rem)] w-96 min-[1201px]:w-11/12 my-5 min-[1201px]:mt-0 bg-backgroundGreen">
                 <div class="z-20 w-full h-full flex justify-center items-center">
                     <div id="coffeeIcon"
-                        class="z-30 w-20 h-20 flex justify-center items-center rounded-full animate-bounce"
-                        style="background-color: #E3CAA5;">
+                        class="z-30 w-20 h-20 flex justify-center items-center rounded-full animate-bounce bg-backgroundBrown">
                         <i class="bi bi-cup-hot text-white" style="font-size: 50px;"></i>
                     </div>
                 </div>
