--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -15,11 +15,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <title>FCU COURSE</title>
     <link rel="icon" href="/static/images/FF.png" type="image/icon">
+    <link rel="stylesheet" href="../static/style/output.css">
+
     <style>
         .courseList {
             -ms-overflow-style: none;
@@ -53,8 +54,7 @@
     </div>
     <div class="h-3/4">
         <div id="courseList"
-            class="courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto"
-            style="background-color: #dfe7d5;">
+            class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto bg-backgroundGreen">
         </div>
     </div>
     <script src="/static/script/generalStudies.js"></script>
