--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <title>FCU COURSE</title>
     <link rel="icon" href="/static/images/FF.png" type="image/icon">
+    <link rel="stylesheet" href="../static/style/output.css">
 </head>
 
 <body class="h-screen bg-slate-100">
