--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -15,11 +15,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <title>FCU COURSE</title>
     <link rel="icon" href="/static/images/FF.png" type="image/icon">
+    <link rel="stylesheet" href="../static/style/output.css">
 </head>
 
 <body class="h-screen bg-slate-100">
@@ -42,8 +42,7 @@
     </div>
 
     <div class="flex justify-center items-start h-3/4 w-full">
-        <div id="searchBox" class="rounded-2xl opacity-70 min-[600px]:w-4/6 h-[calc(100vh*0.75_-_2rem)]"
-            style="background-color: #dfe7d5;">
+        <div id="searchBox" class="rounded-2xl opacity-70 min-[600px]:w-4/6 h-[calc(100vh*0.75_-_2rem)] bg-backgroundGreen">
             <div id="searchInput" class="flex items-center h-5/6">
                 <div class="w-full">
                     <div class="flex justify-center">
@@ -59,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div id="courseListBox" class="flex justify-center items-center h-full hidden px-2">
+            <div id="courseListBox" class="flex justify-center items-center h-full px-2">
                 <div id="courseList"></div>
             </div>
         </div>
