--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -52,9 +52,13 @@
                 style="width: 122px; letter-spacing: 10px;">通識課程</div>
         </div>
     </div>
-    <div class="h-3/4">
+    <div class="h-3/4 relative">
         <div id="courseList"
             class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto bg-backgroundGreen">
+        </div>
+        <div class="absolute bottom-10 right-28 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-5 hover:animate-bounce-y"
+            style="width: 65px; height: 65px;">
+            <i class="bi bi-arrow-up-circle" style="font-size: 65px;"></i>
         </div>
     </div>
     <script src="/static/script/generalStudies.js"></script>
