--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -56,9 +56,9 @@
         <div id="courseList"
             class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto bg-backgroundGreen">
         </div>
-        <div class="absolute bottom-10 right-28 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-5 hover:animate-bounce-y"
-            style="width: 65px; height: 65px;">
-            <i class="bi bi-arrow-up-circle" style="font-size: 65px;"></i>
+        <div class="absolute bottom-6 right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-5 hover:animate-bounce-y bg-white"
+            style="width: 50px; height: 50px;">
+            <i class="bi bi-arrow-up-circle-fill" style="font-size: 50px;"></i>
         </div>
     </div>
     <script src="/static/script/generalStudies.js"></script>
