--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -56,8 +56,10 @@
         <div id="courseList"
             class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto bg-backgroundGreen">
         </div>
-        <div class="absolute bottom-6 right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-5 hover:animate-bounce-y bg-white"
-            style="width: 50px; height: 50px;">
+        <div class="absolute bottom-6 right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-5 hover:animate-bounce-y bg-white animate-fade-in"
+            style="width: 50px; height: 50px;"
+            id="scrollToTopIcon"
+            onclick="scrollToTop()">
             <i class="bi bi-arrow-up-circle-fill" style="font-size: 50px;"></i>
         </div>
     </div>
