--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -49,7 +49,9 @@
                 Follow Course
             </div>
             <div class="font-medium text-lg text-gray-400 mt-6 px-1 border-b-4 border-gray-400"
-                style="width: 122px; letter-spacing: 10px;">關注課程</div>
+                style="width: 122px; letter-spacing: 10px;">
+                關注課程
+            </div>
         </div>
     </div>
     <div class="flex max-[1200px]:flex-col h-3/4">
@@ -103,7 +105,7 @@
                         </div>
                     </div>
                     <div class="flex justify-center">
-                        <button class="text-gray-400 bg-sky-200 font-medium rounded-lg text-lg p-4"
+                        <button class="text-gray-400 bg-sky-200 font-medium rounded-lg text-base p-3"
                             onclick="addFollowCourse()">關注課程</button>
                     </div>
                 </div>
