--- a/static/style/output.css
+++ b/static/style/output.css
@@ -526,10 +526,6 @@ video {
   pointer-events: none;
 }
 
-.invisible {
-  visibility: hidden;
-}
-
 .absolute {
   position: absolute;
 }
@@ -543,16 +539,28 @@ video {
   bottom: 0px;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .left-0 {
   left: 0px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .right-9 {
   right: 2.25rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
 }
 
 .z-0 {
@@ -604,24 +612,42 @@ video {
   margin-bottom: 2rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.-mr-14 {
+  margin-right: -3.5rem;
+}
+
 .-mr-24 {
   margin-right: -6rem;
 }
 
-.-mt-\[calc\(100vh_-_20rem\)\] {
-  margin-top: calc(calc(100vh - 20rem) * -1);
+.-mt-14 {
+  margin-top: -3.5rem;
 }
 
-.-mt-\[calc\(100vh_-_21rem\)\] {
-  margin-top: calc(calc(100vh - 21rem) * -1);
+.-mt-16 {
+  margin-top: -4rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .ml-10 {
   margin-left: 2.5rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .ml-8 {
@@ -664,20 +690,16 @@ video {
   display: none;
 }
 
-.h-1\/4 {
-  height: 25%;
-}
-
 .h-1\/6 {
   height: 16.666667%;
 }
 
-.h-20 {
-  height: 5rem;
+.h-10 {
+  height: 2.5rem;
 }
 
-.h-3\/4 {
-  height: 75%;
+.h-20 {
+  height: 5rem;
 }
 
 .h-3\/5 {
@@ -692,28 +714,24 @@ video {
   height: 11rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
-}
-
 .h-56 {
   height: 14rem;
 }
 
-.h-\[calc\(100vh\*0\.75_-_2rem\)\] {
-  height: calc(100vh * 0.75 - 2rem);
+.h-90\% {
+  height: 90%;
 }
 
-.h-\[calc\(100vh_-_19rem\)\] {
-  height: calc(100vh - 19rem);
+.h-95\% {
+  height: 95%;
 }
 
-.h-\[calc\(100vh_-_20\.5rem\)\] {
-  height: calc(100vh - 20.5rem);
+.h-\[cal\(100vh_-_11rem\)\] {
+  height: cal(100vh - 11rem);
 }
 
-.h-\[calc\(100vh_-_20rem\)\] {
-  height: calc(100vh - 20rem);
+.h-\[calc\(100vh_-_11rem\)\] {
+  height: calc(100vh - 11rem);
 }
 
 .h-full {
@@ -724,16 +742,33 @@ video {
   height: 100vh;
 }
 
+.h-5\/6 {
+  height: 83.333333%;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[cal\] {
+  height: cal;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
 .w-20 {
   width: 5rem;
 }
 
 .w-44 {
   width: 11rem;
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .w-80 {
@@ -746,6 +781,20 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @keyframes bounce {
@@ -796,6 +845,10 @@ video {
 
 .justify-start {
   justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -910,6 +963,11 @@ video {
   background-color: rgb(255 237 213 / var(--tw-bg-opacity));
 }
 
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
@@ -959,9 +1017,30 @@ video {
   padding: 1.25rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-9 {
+  padding: 2.25rem;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -982,6 +1061,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-10 {
@@ -1120,6 +1204,12 @@ video {
   opacity: 0.7;
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .drop-shadow-lg {
   --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1171,18 +1261,6 @@ video {
 
 @media (max-width: 1301px) {
   .max-\[1301px\]\:ml-5 {
-    margin-left: 1.25rem;
-  }
-}
-
-@media (max-width: 1295px) {
-  .max-\[1295px\]\:ml-5 {
-    margin-left: 1.25rem;
-  }
-}
-
-@media (max-width: 1201px) {
-  .max-\[1201px\]\:ml-5 {
     margin-left: 1.25rem;
   }
 }
@@ -1391,32 +1469,12 @@ video {
     margin-top: 0px;
   }
 
-  .min-\[1201px\]\:flex {
-    display: flex;
-  }
-
   .min-\[1201px\]\:hidden {
     display: none;
   }
 
   .min-\[1201px\]\:w-11\/12 {
     width: 91.666667%;
-  }
-}
-
-@media (min-width: 1295px) {
-  .min-\[1295px\]\:flex {
-    display: flex;
-  }
-
-  .min-\[1295px\]\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .min-\[1295px\]\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 }
 
