--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="h-screen bg-slate-100">
-    <div class="flex items-center max-[1200px]:justify-center min-[1201px]:ml-24 max-[465px]:ml-10 h-1/4">
+    <div class="flex items-center max-[1200px]:justify-center min-[1201px]:ml-24 max-[465px]:ml-10 h-44">
         <div class="w-96">
             <div class="cursor-pointer min-[1201px]:hidden">
                 <i class="bi bi-arrow-left-square text-gray-400 font-bold" style="font-size: 30px;"
@@ -54,21 +54,21 @@
             </div>
         </div>
     </div>
-    <div class="flex max-[1200px]:flex-col h-3/4">
-        <div class="flex min-[1200px]:flex-auto justify-center">
+    <div class="flex max-[1200px]:flex-col h-95%">
+        <div class="flex min-[1200px]:flex-auto justify-center h-full">
             <div
-                class="ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-[calc(100vh_-_19rem)] w-96 min-[1201px]:w-11/12 my-5 min-[1201px]:mt-0 bg-backgroundGreen">
-                <div class="z-20 w-full h-full flex justify-center items-center">
+                class="relative ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-90% w-96 min-[1201px]:w-11/12 my-5 min-[1201px]:mt-0 bg-backgroundGreen">
+                <div class="absolute z-20 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-20 h-20">
                     <div id="coffeeIcon"
-                        class="z-30 w-20 h-20 flex justify-center items-center rounded-full animate-bounce bg-backgroundBrown">
+                        class="z-30 flex justify-center items-center rounded-full animate-bounce bg-backgroundBrown">
                         <i class="bi bi-cup-hot text-white" style="font-size: 50px;"></i>
                     </div>
                 </div>
                 <div id="coffeeBackground"
-                    class="z-10 rounded-xl bg-black opacity-30 w-full h-[calc(100vh_-_20.5rem)] -mt-[calc(100vh_-_21rem)]">
+                    class="absolute top-0 left-0 z-10 rounded-xl bg-black opacity-30">
                 </div>
                 <div id="courseList"
-                    class="courseList rounded-xl z-0 -mt-[calc(100vh_-_20rem)] h-[calc(100vh_-_20rem)]"></div>
+                    class="courseList rounded-xl z-0 w-full h-full"></div>
             </div>
         </div>
         <div class="max-[1200px]:order-first order-none">
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="flex justify-center">
-                        <button class="text-gray-400 bg-sky-200 font-medium rounded-lg text-base p-3"
+                        <button class="text-gray-600 bg-sky-200 font-medium rounded-lg text-base p-3"
                             onclick="addFollowCourse()">關注課程</button>
                     </div>
                 </div>
