--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="h-screen bg-slate-100">
-    <div class="flex items-center max-[520px]:ml-8 min-[520px]:ml-24 h-1/4">
+    <div class="flex items-center max-[520px]:ml-8 min-[520px]:ml-24 h-44">
         <div>
             <div class="cursor-pointer min-[931px]:hidden">
                 <i class="bi bi-arrow-left-square text-gray-400 font-bold" style="font-size: 30px;"
@@ -52,11 +52,11 @@
                 style="width: 122px; letter-spacing: 10px;">通識課程</div>
         </div>
     </div>
-    <div class="h-3/4 relative">
+    <div class="h-[calc(100vh_-_11rem)] relative">
         <div id="courseList"
-            class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-[calc(100vh*0.75_-_2rem)] overflow-auto bg-backgroundGreen">
+            class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-95% overflow-auto bg-backgroundGreen">
         </div>
-        <div class="absolute bottom-6 right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-5 hover:animate-bounce-y animate-fade-in"
+        <div class="absolute bottom-4 right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-4 hover:animate-bounce-y animate-fade-in"
             id="scrollToTopIcon"
             onclick="scrollToTop()">
             <i class="bi bi-arrow-up-circle-fill min-[930px]:text-5xl text-4.5xl"></i>
