--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <div class="flex max-[1200px]:flex-col h-95%">
+    <div class="flex max-[1200px]:flex-col" style="height: 74%;">
         <div class="flex min-[1200px]:flex-auto justify-center h-full">
             <div
                 class="relative ml-10 min-[1200px]:ml-24 mr-10 p-5 rounded-xl h-90% w-96 min-[1201px]:w-11/12 my-5 min-[1201px]:mt-0 bg-backgroundGreen">
