--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -56,7 +56,8 @@
         <div id="courseList"
             class="relative courseList mx-8 min-[520px]:mx-24 p-5 rounded-xl h-95% overflow-auto bg-backgroundGreen">
         </div>
-        <div class="absolute bottom-4 right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-4 hover:animate-bounce-y animate-fade-in"
+        <div class="absolute right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-4 hover:animate-bounce-y animate-fade-in"
+            style="bottom: 4%;"
             id="scrollToTopIcon"
             onclick="scrollToTop()">
             <i class="bi bi-arrow-up-circle-fill min-[930px]:text-5xl text-4.5xl"></i>
