--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
             </a>
         </div>
     </div>
-    <div class="h-1/6 flex justify-center items-end">
+    <div class="flex justify-center items-center" style="height: 12%;">
         <div class="flex items-end justify-center p-4 text-gray-400">
             <span class="p-2">
                 <a href="https://github.com/ridemountainpig">
