--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -42,16 +42,15 @@
     </div>
 
     <div class="flex justify-center items-start h-fit w-full">
-        <div id="searchBox"
-            class="rounded-2xl opacity-70 min-[600px]:w-4/6 p-10 mx-5 bg-backgroundGreen">
-            <div id="searchInput" class="flex items-center h-full">
+        <div id="searchBox" class="rounded-2xl opacity-70 min-[600px]:w-4/6 py-40 mx-5 bg-backgroundGreen">
+            <div id="searchInput" class="flex items-center h-full py-10">
                 <div class="w-full">
                     <div class="flex justify-center">
                         <div class="font-medium text-xl text-gray-400 py-2">請輸入課程號碼</div>
                     </div>
                     <div class="min-[600px]:flex max-[600px]:flex-col justify-center px-5">
                         <input type="number" id="courseInput"
-                            class="block max-[600px]:mx-auto min-[600px]:w-3/6 max-[600px]:w-full max-[600px]:rounded-lg max-[600px]:border-8 p-4 pl-10 text-base max-[600px]:text-center text-gray-400 font-bold rounded-tl-lg rounded-bl-lg bg-slate-100 border-t-8 border-b-8 border-l-8 border-white z-10"
+                            class="block max-[600px]:mx-auto min-[600px]:w-3/6 max-[600px]:w-full max-[600px]:rounded-lg max-[600px]:border-8 p-4 px-10 text-base max-[600px]:text-center text-gray-400 font-bold rounded-tl-lg rounded-bl-lg bg-slate-100 border-t-8 border-b-8 border-l-8 border-white z-10"
                             placeholder="Course Number">
                         <button
                             class="block text-gray-400 bg-orange-100 font-medium max-[600px]:mx-auto max-[600px]:rounded-lg max-[600px]:border-8 max-[600px]:mt-2 rounded-tr-lg rounded-br-lg text-lg p-4 border-t-8 border-b-8 border-r-8 border-white"
