--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -92,8 +92,7 @@
                     <div class="h-3/5">
                         <div class="flex justify-between w-full overflow-hidden">
                             <div class="font-medium text-sm text-gray-400 py-2">請輸入課程號碼</div>
-                            <div id="courseNumError" class="font-medium text-sm text-red-300 py-2 -mr-24 duration-500">
-                                課程號碼錯誤</div>
+                            <div id="courseNumError" class="font-medium text-sm text-red-300 py-2 -mr-28 duration-500"></div>
                         </div>
                         <div class="relative flex justify-center items-center">
                             <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
