feat: change back icon url

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -39,12 +39,12 @@
         <div class="w-96">
             <div class="cursor-pointer min-[1201px]:hidden">
                 <i class="bi bi-arrow-left-square text-gray-400 font-bold" style="font-size: 30px;"
-                    onclick="history.back()"></i>
+                    onclick="window.location.href = 'https://fcu-course-search.repl.co/'"></i>
             </div>
             <div class="flex font-bold text-4xl text-gray-600 mt-2">
                 <div class="cursor-pointer max-[1200px]:hidden">
                     <i class="bi bi-arrow-left-square text-gray-400 font-bold pr-2" style="font-size: 30px;"
-                        onclick="history.back()"></i>
+                        onclick="window.location.href = 'https://fcu-course-search.repl.co/'"></i>
                 </div>
                 Follow Course
             </div>
