--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -27,12 +27,12 @@
         <div>
             <div class="cursor-pointer min-[650px]:hidden">
                 <i class="bi bi-arrow-left-square text-gray-400 font-bold" style="font-size: 30px;"
-                    onclick="history.back()"></i>
+                    onclick="window.location.href = 'https://fcu-course-search.repl.co/'"></i>
             </div>
             <div class="flex font-bold text-4xl text-gray-600">
                 <div class="cursor-pointer max-[651px]:hidden">
                     <i class="bi bi-arrow-left-square text-gray-400 font-bold pr-2" style="font-size: 30px;"
-                        onclick="history.back()"></i>
+                        onclick="window.location.href = 'https://fcu-course-search.repl.co/'"></i>
                 </div>
                 Course Number
             </div>
