--- a/static/style/output.css
+++ b/static/style/output.css
@@ -660,40 +660,16 @@ video {
   margin-top: -10rem;
 }
 
-.-ml-52 {
-  margin-left: -13rem;
+.-ml-72 {
+  margin-left: -18rem;
 }
 
 .-mt-10 {
   margin-top: -2.5rem;
 }
 
-.-mr-52 {
-  margin-right: -13rem;
-}
-
-.-ml-6 {
-  margin-left: -1.5rem;
-}
-
-.-ml-60 {
-  margin-left: -15rem;
-}
-
-.-mr-60 {
-  margin-right: -15rem;
-}
-
-.-mr-6 {
-  margin-right: -1.5rem;
-}
-
-.-mr-64 {
-  margin-right: -16rem;
-}
-
-.-ml-64 {
-  margin-left: -16rem;
+.-mr-72 {
+  margin-right: -18rem;
 }
 
 .-mt-14 {
@@ -710,22 +686,6 @@ video {
 
 .ml-5 {
   margin-left: 1.25rem;
-}
-
-.-ml-7 {
-  margin-left: -1.75rem;
-}
-
-.-ml-72 {
-  margin-left: -18rem;
-}
-
-.-mr-72 {
-  margin-right: -18rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
 }
 
 .block {
@@ -788,6 +748,10 @@ video {
   height: 2.5rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .w-96 {
   width: 24rem;
 }
@@ -814,6 +778,10 @@ video {
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .-translate-x-1\/2 {
