update: styling up for mobile view

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                     <div class="flex justify-center">
                         <div class="pb-10">
                             <span class="font-bold text-2xl text-gray-600">Course Number</span><br>
-                            <span class="font-medium text-sm text-gray-400">課程號碼</span>
+                            <span class="flex justify-center mt-2 font-medium text-sm text-gray-400">課程號碼</span>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     <div class="flex justify-center">
                         <div class="pb-10">
                             <span class="font-bold text-2xl text-gray-600">General Studies</span><br>
-                            <span class="font-medium text-sm text-gray-400">通識課程</span>
+                            <span class="flex justify-center mt-2 font-medium text-sm text-gray-400">通識課程</span>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="flex justify-center">
                         <div class="pb-10">
                             <span class="font-bold text-2xl text-gray-600">Follow Courses</span><br>
-                            <span class="font-medium text-sm text-gray-400">關注課程</span>
+                            <span class="flex justify-center mt-2 font-medium text-sm text-gray-400">關注課程</span>
                         </div>
                     </div>
                 </div>
@@ -79,18 +79,20 @@
         </div>
     </div>
     <div class="flex justify-center items-center" style="height: 12%;">
-        <div class="flex items-end justify-center p-4 text-gray-400">
-            <span class="p-2">
-                <a href="https://github.com/ridemountainpig">
+        <div class="min-[1100px]:flex items-end justify-center p-4 text-gray-400">
+            <div class="p-2 flex justify-center">
+                <a href="https://github.com/ridemountainpig" class="p-2">
                     <i class="bi bi-battery-full text-green-500"></i> Power By ridemountainpig
                 </a>
-            </span>
-            <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg">
-                <span>
-                    <i class="bi bi-github"></i>
-                    Star Project
-                </span>
-            </a>
+            </div>
+            <div class="p-2 flex justify-center max-[1301px]:justify-center">
+                <a href="https://github.com/ridemountainpig/fcu-course-search" class="p-2 bg-white rounded-lg">
+                    <span>
+                        <i class="bi bi-github"></i>
+                        Star Project
+                    </span>
+                </a>
+            </div>
         </div>
     </div>
 </body>
