--- a/static/style/output.css
+++ b/static/style/output.css
@@ -554,54 +554,6 @@ video {
   right: 0px;
 }
 
-.top-12 {
-  top: 3rem;
-}
-
-.right-28 {
-  right: 7rem;
-}
-
-.right-24 {
-  right: 6rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.right-auto {
-  right: auto;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
 .z-20 {
   z-index: 20;
 }
@@ -628,6 +580,10 @@ video {
 
 .m-3 {
   margin: 0.75rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
 }
 
 .my-5 {
@@ -660,6 +616,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -686,10 +652,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.-mr-28 {
-  margin-right: -7rem;
 }
 
 .mr-5 {
@@ -720,6 +682,10 @@ video {
   margin-right: -18rem;
 }
 
+.-mr-28 {
+  margin-right: -7rem;
+}
+
 .-mt-14 {
   margin-top: -3.5rem;
 }
@@ -734,6 +700,22 @@ video {
 
 .ml-5 {
   margin-left: 1.25rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .block {
@@ -831,11 +813,6 @@ video {
 
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1142,6 +1119,10 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1235,11 +1216,6 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity));
-}
-
 .text-orange-400 {
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
@@ -1322,6 +1298,14 @@ video {
   .max-\[1301px\]\:ml-5 {
     margin-left: 1.25rem;
   }
+
+  .max-\[1301px\]\:justify-center {
+    justify-content: center;
+  }
+
+  .max-\[1301px\]\:text-center {
+    text-align: center;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -1331,10 +1315,6 @@ video {
 
   .max-\[1200px\]\:hidden {
     display: none;
-  }
-
-  .max-\[1200px\]\:w-full {
-    width: 100%;
   }
 
   .max-\[1200px\]\:flex-col {
@@ -1347,6 +1327,10 @@ video {
 }
 
 @media (max-width: 1100px) {
+  .max-\[1100px\]\:flex {
+    display: flex;
+  }
+
   .max-\[1100px\]\:flex-col {
     flex-direction: column;
   }
@@ -1357,8 +1341,20 @@ video {
     margin-left: 1.25rem;
   }
 
+  .max-\[930px\]\:flex {
+    display: flex;
+  }
+
   .max-\[930px\]\:hidden {
     display: none;
+  }
+
+  .max-\[930px\]\:justify-center {
+    justify-content: center;
+  }
+
+  .max-\[930px\]\:text-center {
+    text-align: center;
   }
 }
 
@@ -1403,27 +1399,29 @@ video {
   .max-\[520px\]\:ml-8 {
     margin-left: 2rem;
   }
+
+  .max-\[520px\]\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
+  .max-\[520px\]\:ml-4 {
+    margin-left: 1rem;
+  }
 }
 
 @media (max-width: 465px) {
-  .max-\[465px\]\:right-24 {
-    right: 6rem;
-  }
-
   .max-\[465px\]\:ml-10 {
     margin-left: 2.5rem;
+  }
+
+  .max-\[465px\]\:ml-4 {
+    margin-left: 1rem;
   }
 }
 
 @media (max-width: 450px) {
   .max-\[450px\]\:flex-col {
     flex-direction: column;
-  }
-}
-
-@media (min-width: 465px) {
-  .min-\[465px\]\:right-24 {
-    right: 6rem;
   }
 }
 
@@ -1510,24 +1508,16 @@ video {
 }
 
 @media (min-width: 1100px) {
+  .min-\[1100px\]\:flex {
+    display: flex;
+  }
+
   .min-\[1100px\]\:h-4\/6 {
     height: 66.666667%;
   }
 }
 
 @media (min-width: 1200px) {
-  .min-\[1200px\]\:absolute {
-    position: absolute;
-  }
-
-  .min-\[1200px\]\:right-24 {
-    right: 6rem;
-  }
-
-  .min-\[1200px\]\:top-20 {
-    top: 5rem;
-  }
-
   .min-\[1200px\]\:ml-24 {
     margin-left: 6rem;
   }
@@ -1576,5 +1566,10 @@ video {
   .min-\[1301px\]\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .min-\[1301px\]\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
