feat: styling up

--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -100,7 +100,7 @@
                                 <i class="bi bi-plus-circle text-gray-400" style="font-size: 20px;"></i>
                             </div>
                             <input type="number" id="courseInput"
-                                class="block w-full p-4 pl-10 text-base text-gray-400 font-bold rounded-lg bg-slate-100"
+                                class="block w-full p-4 pl-10 text-base text-gray-400 font-bold rounded-lg bg-slate-100 focus:outline-none"
                                 placeholder="Course Number">
                         </div>
                     </div>
