--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -54,7 +54,7 @@
                         <input id="courseInput"
                             class="block max-[700px]:mx-auto max-[700px]:w-full max-[700px]:rounded-lg max-[700px]:border-8 
                                 p-4 px-10 w-100 text-base max-[700px]:text-center text-gray-400 font-bold rounded-tl-lg rounded-bl-lg bg-slate-100 
-                                border-t-8 border-b-8 border-l-8 border-white z-10"
+                                border-t-8 border-b-8 border-l-8 border-white z-10 focus:outline-none"
                             placeholder="Course Number">
                         <button
                             class="block text-gray-400 bg-orange-100 font-medium max-[700px]:mx-auto max-[700px]:rounded-lg max-[700px]:border-8 max-[700px]:mt-2 
